<resources>
    <string name="app_name">Lo-cal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_person_name_hint">First person\'s name</string>
    <string name="second_person_name_hint">Second person\'s name</string>
    <string name="calculate_button_content_description">calculate button</string>
    <string name="calculate_again_button_text">Calculate Again</string>
    <string name="result_statement">%s and %s has %s love between them</string>
    <string name="about_us_content">This fragment contains details about the app</string>
    <string name="about_us_option_text">About Us</string>
    <string name="share_result_option_text">Share Result</string>
    <string name="rules_fragment_content">Here are the rules of the game</string>
    <string name="rules_option_text">Game Rules</string>
    <string name="share_intent_text">Share Via</string>
    <string name="dbCount_option_text">DB count</string>
    <string name="clean_db_button_text">Clean DB</string>
    <string name="show_db_options_text">Show DB</string>
    <string name="header_text">LoCal Data</string>
    <string name="game_fragment_label">Love Calculator</string>
    <string name="result_fragment_label">Result</string>
    <string name="database_fragment_label">Database</string>
    <string name="about_us_fragment_label">About Us</string>
</resources>
