<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/gameFragment">

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.lo_cal.ui.game.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_resultFragment"
            app:destination="@id/resultFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.lo_cal.ui.result.ResultFragment"
        android:label="@string/result_fragment_label"
        tools:layout="@layout/fragment_result">
        <argument
            android:name="firstPersonName"
            app:argType="string" />
        <argument
            android:name="secondPersonName"
            app:argType="string" />
        <argument
            android:name="result"
            android:defaultValue="0"
            app:argType="string" />
        <action
            android:id="@+id/action_resultFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/resultFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.lo_cal.ui.about.AboutFragment"
        android:label="@string/about_us_fragment_label"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/databaseFragment"
        android:name="com.example.lo_cal.ui.database.DatabaseFragment"
        android:label="@string/database_fragment_label"
        tools:layout="@layout/fragment_database" />
</navigation>