<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".GameFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/first_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_person_name_hint" />

    <ImageButton
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calculate_button_content_description"
        android:src="@drawable/love_button" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/second_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/second_person_name_hint" />

</androidx.appcompat.widget.LinearLayoutCompat>